2009-03-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/simple-indenter.c:
	Use gint instead of gfloat for indentation level.

	* gtksourceview/gtksourceview.c:
	If we have any indentation when we press \n delete it 
	before insert the new indentation.

2009-03-02  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/c-indenter.c:
	* gtksourceview/gtksourceindenter-utils.c:
	* gtksourceview/gtksourceindenter.c:
	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourceindenter-utils.h:
	* gtksourceview/gtksourceindenter.h:
	Clean up the source code and change from the gfloat approach
	to a gint approach when getting the indent level.

2009-03-01  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceindentermanager.c:
	* gtksourceview/gtksourceindenter-utils.c:
	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourceindenter-utils.h:
	* tests/test-widget.c:
	Fix compilation warnings.

2009-03-01  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/c-indenter.c:
	Get the right indent level when having something like:
	if (true)
		hello ();

	* gtksourceview/gtksourceview.c:
	Fix a false positive when checking whitespaces.

2009-03-01  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceview.c:
	Relocate if the inserted char is at column 0.

2009-02-28  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/c-indenter.c:
	Set amount to 0 if we are in a function declaration.

2009-02-28  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcelanguage.c:
	* gtksourceview/gtksourcelanguage.h:
	* gtksourceview/c-indenter.c:
	* gtksourceview/gtksourceindentermanager.c:
	* gtksourceview/c-indenter.h:
	* gtksourceview/gtksourceindenter-utils.c:
	* gtksourceview/simple-indenter.c:
	* gtksourceview/gtksourceview-utils.c:
	* gtksourceview/gtksourceindentermanager.h:
	* gtksourceview/gtksourceindenter.c:
	* gtksourceview/gtksourceview.c: