@@ -1,3 +1,8 @@
+2009-03-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/c-indenter.c:
+	Add right indentation in case labels.
+
 2009-03-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gtksourceview/simple-indenter.c:
